[package]
name = "refunct-tas-ingame-lib"
version = "0.9.5"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
once_cell = "1.9.0"
byteorder = "1.4.3"
backtrace = "0.3.64"
rtil_derive = { path = "../rtil_derive" }
crossbeam-channel = "0.5.2"
memoffset = "0.6.5"
#rebo = { path = "../../rebo/rebo" }
rebo = { git = "https://github.com/oberien/rebo", rev = "bbd708a1c2e33f354a35cc2b76122001e6c896fb" }
itertools = "0.10.3"
clipboard = "0.5.0"
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
websocket = "0.26.3"
dirs = "4.0.0"
sanitize-filename = "0.3.0"
env_logger = "0.9.0"
bit_field = "0.10.2"
image = "0.24.6"
ureq = "2.6.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.119"
dynsym = { path = "../dynsym" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "tlhelp32", "handleapi", "processthreadsapi", "minwindef", "impl-default", "memoryapi", "libloaderapi"] }

[lib]
name = "rtil"
crate_type = ["dylib"]

[profile.dev]
panic = 'abort'

[profile.release]
debug = true
debug-assertions = true
panic = 'abort'