[package]
name = "refunct-tas-ingame-lib"
version = "0.9.7"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2021"

[dependencies]
opener = "0.8.2"
protocol = { path = "../protocol" }
once_cell = "1.9.0"
byteorder = "1.4.3"
backtrace = "0.3.64"
rtil_derive = { path = "../rtil_derive" }
crossbeam-channel = "0.5.2"
memoffset = "0.9.1"
#rebo = { path = "../../rebo/rebo" }
rebo = { git = "https://github.com/oberien/rebo", rev = "a6543573f0660fee80c1058d502cb0fc5ae534fd" }
itertools = "0.14.0"
clipboard = "0.5.0"
thiserror = "2.0.12"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
websocket = "0.27.1"
dirs = "6.0.0"
sanitize-filename = "0.6.0"
env_logger = "0.11.8"
bit_field = "0.10.2"
image = "0.25.6"
ureq = "3.0.11"
corosensei = "0.2.2"
atomic_float = "1.1.0"
chrono = {  version = "0.4.39", features = ["serde"] }
livesplit-core = "0.13.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.119"
dynsym = { path = "../dynsym" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "tlhelp32", "handleapi", "processthreadsapi", "minwindef", "impl-default", "memoryapi", "libloaderapi"] }

[lib]
name = "rtil"
crate-type = ["dylib"]

[profile.dev]
panic = 'abort'

[profile.release]
debug = true
debug-assertions = true
panic = 'abort'

[patch.crates-io]
livesplit-core = { git = "https://github.com/LukeSaward1/livesplit-core.git", rev = "aaecd2641f6f20c1fc7107ec151c793ec68117df" }