[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.8", features = ["ws"] }
tokio = { version = "1.17.0", features = ["full"] }
protocol = { path = "../protocol" }
futures = "0.3.21"
log = "0.4.14"
env_logger = "0.9.0"
serde_json = "1.0.79"
console-subscriber = "0.1.3"

