[package]
name = "refunct-tas"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2021"

[dependencies]
thiserror = "1.0.30"
toml = "0.4"
serde = { version = "1.0.136", features = ["derive"] }
byteorder = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.2"
