[package]
name = "refunct-tas"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2021"

[dependencies]
thiserror = "1.0.30"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
byteorder = "1.4.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "libloaderapi", "memoryapi", "handleapi", "winnt"] }
